fixed navigation on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -27,7 +27,6 @@ header .nav-wrapper {
 .main-nav-content div:nth-child(1) div {
   border-top: 1px solid var(--sub-text-border-divider);
   margin-top: calc(var(--nav-height) / 2 + 10px);
-  border: 2px solid rebeccapurple;
 }
 
 /* Nav content */
@@ -57,7 +56,8 @@ header nav[aria-expanded="true"] {
 
 @media (width < 599px) {
   header nav {
-    height: calc(var(--nav-height) / 2);
+    height: calc(var(--nav-height) / 2 + 6px);
+    border-bottom: 2px solid var(--sub-text-border-divider);
   }
 
   main .modal dialog {
@@ -109,9 +109,9 @@ header nav[aria-expanded="true"] {
     position: relative;
     width: 100%;
     margin: 0;
-    height: auto;
+    height: 100%;
+
     padding: 0;
-    border-bottom: 1px solid var(--sub-text-border-divider);
   }
 
   /* image */
@@ -162,6 +162,7 @@ header nav[aria-expanded="true"] {
       align-items: center;
       justify-content: center;
       background-color: white;
+      padding: 0 18%;
       box-shadow: 4px 0px 3px rgba(0, 0, 0, 0.2);
     }
 
@@ -172,6 +173,7 @@ header nav[aria-expanded="true"] {
       align-items: center;
       justify-content: center;
       background-color: white;
+      padding: 0 18%;
       box-shadow: -4px 0px 3px rgba(0, 0, 0, 0.2);
     }
 
@@ -208,9 +210,11 @@ header nav[aria-expanded="true"] {
 
     /* navigation in burger */
     .nav-sections .main-nav-content div.button-container {
+      display: flex;
       margin-top: 5%;
       margin-bottom: 3%;
       padding: 1% 0;
+      justify-content: flex-start;
     }
 
     .nav-tools .burger-sub-menu {
@@ -225,6 +229,7 @@ header nav[aria-expanded="true"] {
     .nav-tools .burger-sub-menu div:nth-child(2) p {
       display: flex;
       padding: 4%;
+      justify-content: flex-start;
     }
 
     .nav-tools {
@@ -234,9 +239,7 @@ header nav[aria-expanded="true"] {
     }
 
     .nav-tools .burger-sub-menu div div:nth-child(1) p {
-      text-align: left;
       padding: 0;
-      align-items: flex-start;
       width: auto;
     }
 
@@ -244,6 +247,7 @@ header nav[aria-expanded="true"] {
     .nav-tools .burger-sub-menu div:nth-child(1) div p {
       color: var(--sub-text-grey);
       font-size: var(--sub-text-secondary-size);
+      justify-content: start;
     }
 
     .nav-tools .burger-sub-menu div:nth-child(2) div p {
